# django-postgresql-2024

./: .gitignore  README.md  pyproject.toml
app/: forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/static/css/: edit.css  list.css
app/templates/app/: add.html  base.html  edit.html  list.html
project/: settings.py
