[tool.poetry]
name = "book reservation"
version = "0.1.0"
description = ""
authors = ["Christian Q. Cleofas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
